Use shorthand